# EthiStyle

./: README.md
.github/workflows/: audit.yml  general.yml
backend/: .env  Cargo.toml  Dockerfile  configuration.yml  docker-compose.yml
backend/.sqlx/: query-6ecd395d6d84ac59c785660b7ebc1df8080c10e776ef2f224f2bddac7fde03be.json  query-a222ef2aaf8522cafc218bf2e14c57f0667180c4e7e0150f931248991ddd3106.json
backend/configuration/: base.toml  base.yml  dev.toml  dev.yml  prod.toml  prod.yml
backend/migrations/: 20231217154714_init.up.sql  20231218162912_create_subscriptions_table.sql  20231231125419_create_basic_users_table.sql  20240206193716_jwt_ids.sql  20240216091441_items.sql  20240308100417_messages.sql
backend/scripts/: docker-compose.yml  init_db.sh  init_pgadmin.sh  pgadmin_password_file
backend/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
backend/src/application/: argon_hasher.rs  jwt.rs  mod.rs
backend/src/application/handlers/: mod.rs
backend/src/application/handlers/items/: create.rs  delete.rs  edit.rs  get_all.rs  get_one.rs  mod.rs
backend/src/application/handlers/messages/: delete_conversation.rs  delete_message.rs  get_all.rs  mod.rs  write.rs
backend/src/application/handlers/messages/items/: delete.rs
backend/src/application/handlers/users/: get_jwt.rs  mod.rs  refresh_jwt.rs  register.rs
backend/src/application/middleware/: jwt_auth.rs
backend/src/application/routes/: direct_messages.rs  health_check.rs  items.rs  messages.rs  mod.rs  protected_endpoint.rs  users.rs
backend/src/application/routes/user/: get_jwt.rs  login.rs  mod.rs  register.rs
backend/src/application/startup/: app.rs  dependencies.rs  mod.rs
backend/src/domain/: app_state.rs  hasher.rs  jwt_claims.rs  mod.rs  new_subscriber.rs  schemas.rs  subscriber_email.rs  subscriber_name.rs
backend/src/domain/items/: create_schema.rs  mod.rs  model.rs  update_schema.rs
backend/src/domain/jwt/: jwt_claims.rs  jwt_decoder.rs  jwt_encoder.rs  mod.rs
backend/src/domain/user/: clear_password.rs  email.rs  login_user_dto.rs  middleware_schema.rs  mod.rs  name.rs  new_user.rs  password_hash.rs  register_user_dto.rs
backend/src/jwt_tuto/: handler.rs  jwt_auth.rs  mod.rs  model.rs  response.rs  routes.rs
backend/src/routes/: mod.rs  protected_endpoint.rs  subscribe.rs
backend/src/routes/user/: register.rs
backend/tests/: crud_items.rs  health_check.rs  jwt_protected_endpoint.rs  login.rs  messages.rs  refresh_jwt.rs  register.rs
backend/tests/helper/: hashing_helper.rs  mock_hasher.rs  mod.rs  spawn_app.rs
front/: index.html  package.json  tailwind.config.js  vite.config.ts
front/public/: not-mobile.html  style.css
front/src/app/: app.tsx
front/src/app/article_page/: main.tsx
front/src/app/pages/: gps_localisation.tsx  login.tsx  lost_password.tsx  manual_localisation.tsx  register.tsx  welcome_page.tsx
front/src/app/pages/article_page/: article_presentation.tsx  bought_dialog.tsx  buy_page.tsx  main.tsx
front/src/app/pages/home_page/: home_page.tsx
front/src/app/pages/login_register/: gps_localisation.tsx  login.tsx  lost_password.tsx  manual_localisation.tsx  register.tsx  welcome_page.tsx
front/src/app/pages/main_page/: main_page.tsx  tabs.tsx
front/src/app/pages/search_tab/: bar.tsx  categories.tsx  filter_modal.tsx  history.tsx  main.tsx  results.tsx  search_bar.tsx  search_tab.tsx
front/src/app/pages/selling_page/: selling_page.tsx
front/src/app/profile_page/: profile.tsx
front/src/app/provider/: auth_provider.tsx
front/src/app/routes/: index.tsx  login.tsx  logout.tsx  protected_route.tsx  register.tsx
front/src/components/atoms/: Article.ts  button.tsx  horizontal_separator.tsx  input.tsx
front/src/components/atoms/button/: button.tsx
front/src/components/molecules/: radio_buttons.tsx  secret_code.tsx
front/src/components/organisms/: article_card.tsx  profile-pic-upload.tsx
