[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Server
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JWT
jsonwebtoken = "9"
argon2 = "0.5.0"
rand_core = { version = "0.6.4", features = ["std"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }

# DB
sqlx = { version = "0.7", features = [
	"runtime-async-std-native-tls",
	"postgres",
	"chrono",
	"uuid",
] }

# Utilities
dotenv = "0.15.0"
chrono = { version = "0.4.24", features = ["serde"] }
time = "0.3.20"
