[package]
name = "zero2prod"
version = "0.1.0"
authors = ["LukeMathWalker <rust@lpalmieri.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
# Author's dependencies
tokio = { version = "1", features = ["full"] }
serde = "1.0.115"
config = { version = "0.13", default-features = false, features = ["yaml"] }
sqlx = { version = "0.7", default-features = false, features = [
	"runtime-async-std-native-tls",
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
reqwest = { version = "0.11", default-features = false, features = [
	"json",
	"rustls-tls",
	"cookies",
] }
log = "0.4"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
thiserror = "1.0.24"
serde-aux = "4"
unicode-segmentation = "1.7.1"
rand = { version = "0.8", features = ["std_rng"] }
anyhow = "1.0.40"
base64 = "0.21.0"
argon2 = { version = "0.5", features = ["std"] }
validator = "0.16"
secrecy = { version = "0.8", features = ["serde"] }
serde_json = "1"

# I added axum dependencies
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
tower = "0.4"
tower-http = { version = "0.5", features = [
	"cors",
	"trace",
	"request-id",
	"util",
] }
hyper = { version = "1", features = ["full"] }
jsonwebtoken = "9"
rand_core = { version = "0.6.4", features = ["std"] }

[dev-dependencies]
once_cell = "1.7.2"
claims = "0.7.0"
quickcheck = "1"
quickcheck_macros = "1"
fake = "2"
wiremock = "0.5"
serde_json = "1.0.61"
linkify = "0.10"
