[package]
name = "ethistyle"
version = "0.1.0"
authors = ["LukeMathWalker <rust@lpalmieri.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ethistyle"

[profile.release]
strip = true

[dependencies]
# Server
axum = "0.7"
# axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "request-id", "util"] }

# Serialization
serde = "1"
serde_json = "1"
serde-aux = "4"

# Tracing
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"

config = { version = "0.14", default-features = false, features = ["yaml"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
unicode-segmentation = "1.7.1"
buildstructor = "0.5"

argon2 = { version = "0.5", features = ["password-hash"] }
validator = "0.16"
secrecy = { version = "0.8", features = ["serde"] }

jsonwebtoken = "9"
rand_core = "0.6.4"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "postgres", "uuid", "chrono", "migrate", "runtime-tokio"]

[dev-dependencies]
reqwest = "0.11"
once_cell = "1.7.2"
claims = "0.7.0"
